Fixing navbar on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,11 @@
 body {
   font-family: var(--font-main), sans-serif;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
